# robot-gitee-checkpr

./: BUILD.bazel  Makefile  README.md  WORKSPACE  build.sh  checkpr.go  config.go  def.bzl  go.mod  go.sum  main.go  robot.go
publish/: command_status.sh
