load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opensourceways/robot-gitee-plugin-checkpr
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "checkpr.go",
        "config.go",
        "main.go",
    ],
    importpath = "github.com/opensourceways/robot-gitee-plugin-checkpr",
    visibility = ["//visibility:private"],
    deps = [
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_opensourceways_robot_gitee_plugin_lib//config:go_default_library",
        "@com_github_opensourceways_robot_gitee_plugin_lib//giteeclient:go_default_library",
        "@com_github_opensourceways_robot_gitee_plugin_lib//logrusutil:go_default_library",
        "@com_github_opensourceways_robot_gitee_plugin_lib//options:go_default_library",
        "@com_github_opensourceways_robot_gitee_plugin_lib//plugin:go_default_library",
        "@com_github_opensourceways_robot_gitee_plugin_lib//utils:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "robot-gitee-plugin-checkpr",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
